# py8dis

./: pyproject.toml
py8dis/: acme.py  acorn.py  assembler.py  beebasm.py  classification.py  commands.py  comment.py  constant.py  cpu.py  cpu6502.py  cpu65C02.py  cpu8080.py  disassembly.py  label.py  labelmakingdata.py  labelmanager.py  mainformatter.py  markdown_asm.py  memorymanager.py  movedefinition.py  movemanager.py  structured.py  subroutine.py  trace.py  utils.py  xa.py  z88dk_8080.py
tests/: conftest.py  test_address_uri_links.py  test_data_banner.py  test_fill.py  test_labels_per_move_id.py  test_markdown_asm.py  test_memory_map.py  test_move_id_comment.py  test_rom_subroutine_header.py  test_structured_at_binary_addr.py  test_subroutine_binary_addr.py
