[project]
name = "py8dis"
version = "0.1.0"
description = "A programmable static-tracing disassembler for 6502, 65C02 and 8080"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["py8dis"]
